--- a/app/templates/visualization.html
+++ b/app/templates/visualization.html
@@ -73,6 +73,7 @@
                 <li><a href="{{ url_for('standards_view') }}">Standards</a></li>
                 <li><a href="{{ url_for('lessons_view') }}">Lessons</a></li>
                 <li class="active"><a href="{{ url_for('visualization_view') }}">Visualization</a></li>
+                <li><a href="{{ url_for('verification_view') }}">Question Verification</a></li>
             </ul>
         </nav>
     </header>
